Fixed header overflow

--- a/css/header.css
+++ b/css/header.css
@@ -3,17 +3,17 @@ header {
 	background-image: url(../img/starsky.jpg);
 	height: 20%;
 	width: 100%;
-	padding: 1em;
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
+	overflow: hidden;
 }
 
 h1 {
-	margin: 0%;
+	margin: 1rem;
 	font-size: 64px;
 }
 
 h3 {
-	margin: 0%;
+	margin: 1rem;
 }
